adjust popup layout.

--- a/ext/html/popup.html
+++ b/ext/html/popup.html
@@ -75,16 +75,16 @@
         RetroTxt runs in the background and will attempt to format text files hosted on these websites:
       </div>
       <div class="block is-family-monospace" id="websites"></div>
-      <div class="block" id="localfiles">
+      <div class="block has-text-link-dark" id="localfiles">
         RetroTxt also formats local text files using drag and drop.
       </div>
-      <div class="block is-hidden" id="unlockLocalfiles">
-        When <a id="linkUnlock">Allow access to file URLs is toggled</a>, RetroTxt can format local
-        text files using drag and drop.
-      </div>
-      <div class="notification is-link" id="allowAccess">
+      <div class="notification is-link is-light" id="allowAccess" title="Open the Settings Option tab">
         To include a new website, click here to open settings and add the URL to the
-        <strong>Run RetroTxt on files hosted on these domains</strong> list.
+        <strong>Autorun for webistes</strong> list.
+      </div>
+      <div class="notification is-info is-light is-hidden" id="unlockLocalfiles" title="Open the Extension options">
+        When <strong>Allow access to file URLs</strong> is toggled, RetroTxt
+        can format local text files using drag and drop.
       </div>
     </div>
   </div>
