css mouse pointer fix.

--- a/ext/html/popup.html
+++ b/ext/html/popup.html
@@ -11,7 +11,8 @@
       width: 33em;
     }
 
-    div#allowAccess {
+    div#allowAccess,
+    div#unlockLocalfiles {
       cursor: pointer;
     }
 
