--- a/ext/html/popup.html
+++ b/ext/html/popup.html
@@ -11,7 +11,8 @@
       width: 33em;
     }
 
-    div#allowAccess {
+    div#allowAccess,
+    div#unlockLocalfiles {
       cursor: pointer;
     }
 
@@ -57,14 +58,14 @@
             <use xlink:href="../assets/svg/material-icons.svg#display"></use>
           </svg>
         </span>
-        <span class="icon" id="extension">
-          <svg role="img" class="material-icons">
-            <use xlink:href="../assets/svg/material-icons.svg#extension"></use>
-          </svg>
-        </span>
         <span class="icon" id="settings">
           <svg role="img" class="material-icons">
             <use xlink:href="../assets/svg/material-icons.svg#settings"></use>
+          </svg>
+        </span>
+        <span class="icon" id="extension">
+          <svg role="img" class="material-icons">
+            <use xlink:href="../assets/svg/material-icons.svg#extension"></use>
           </svg>
         </span>
       </div>
@@ -75,16 +76,16 @@
         RetroTxt runs in the background and will attempt to format text files hosted on these websites:
       </div>
       <div class="block is-family-monospace" id="websites"></div>
-      <div class="block" id="localfiles">
+      <div class="block has-text-link-dark" id="localfiles">
         RetroTxt also formats local text files using drag and drop.
       </div>
-      <div class="block is-hidden" id="unlockLocalfiles">
-        When <a id="linkUnlock">Allow access to file URLs is toggled</a>, RetroTxt can format local
-        text files using drag and drop.
-      </div>
-      <div class="notification is-link" id="allowAccess">
+      <div class="notification is-link is-light" id="allowAccess" title="Open the Settings Option tab">
         To include a new website, click here to open settings and add the URL to the
-        <strong>Run RetroTxt on files hosted on these domains</strong> list.
+        <strong>Autorun for webistes</strong> list.
+      </div>
+      <div class="notification is-info is-light is-hidden" id="unlockLocalfiles" title="Open the Extension options">
+        When <strong>Allow access to file URLs</strong> is toggled, RetroTxt
+        can format local text files using drag and drop.
       </div>
     </div>
   </div>
