depature mono font.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -223,10 +223,14 @@
                         <a href="https://github.com/fcambus/spleen"><strong>Frederic Cambus</strong>, Spleen</a>
                       </li>
                       <li>
+                        <a href="https://departuremono.com"><strong>Helena Zhang</strong>, Intel One
+                          Mono</a>
+                      </li>
+                      <li>
                         <a href="https://github.com/IBM/plex"><strong>IBM Corp.</strong> Plex Mono</a>
                       </li>
                       <li>
-                        <a href="https://github.com/intel/intel-one-mono"><strong>Intel Corp.</strong> Intel One
+                        <a href="https://github.com/intel/intel-one-mono"><strong>Intel Corp.</strong> Departure
                           Mono</a>
                       </li>
                       <li>
@@ -580,7 +584,7 @@
                     <a href="http://artscene.textfiles.com">Artscene Collection at textfiles.com</a>
                   </li>
                   <li>
-                    <a href="https://defacto2.net/file/list?output=card&platform=ansi&section=-&sort=date_desc">Defacto2
+                    <a href="https://defacto2.net/files/ansi">Defacto2
                       ansi files</a>
                   </li>
                 </ul>
@@ -731,6 +735,23 @@
                     <label class="radio" for="cascadiacodepl">
                       <input type="radio" name="font" id="cascadiacodepl" value="cascadiacodepl"> <u>Code PL</u>
                       <small>with ligatures &amp; Powerline symbols</small>
+                    </label>
+                  </div>
+                  <hr>
+                  <h2 class="title has-text-dark is-size-6">
+                    Departure Mono
+                    <a href="https://departuremono.com" target="_blank">
+                      <svg role="img" class="material-icons has-text-info is-size-6">
+                        <use xlink:href="../assets/svg/material-icons.svg#info"></use>
+                      </svg>
+                    </a>
+                  </h2>
+                  <p class="subtitle has-text-dark is-size-6 mb-2">Departure Mono is a monospaced pixel font inspired by
+                    the constraints of early command-line and graphical user interfaces
+                  </p>
+                  <div class="control">
+                    <label class="radio" for="departuremono">
+                      <input type="radio" name="font" id="departuremono" value="departuremono"> <u>Regular</u>
                     </label>
                   </div>
                   <hr>
