placeholder security and error tests

--- a/ext/test/index.html
+++ b/ext/test/index.html
@@ -15,6 +15,8 @@
   <script src="qunit.js"></script>
   <script src="tests-sw.js"></script>
   <script src="tests-helpers.js"></script>
+  <script src="tests-security.js"></script>
+  <script src="tests-errors.js"></script>
   <script src="tests-parse_ansi-sequences.js"></script>
   <script src="tests-parse_ansi.js"></script>
   <script src="tests-parse_dos.js"></script>
