more test coverage

--- a/ext/test/index.html
+++ b/ext/test/index.html
@@ -17,6 +17,9 @@
   <script src="tests-helpers.js"></script>
   <script src="tests-security.js"></script>
   <script src="tests-errors.js"></script>
+  <script src="tests-downloads.js"></script>
+  <script src="tests-file-examples.js"></script>
+  <script src="tests-expanded-examples.js"></script>
   <script src="tests-parse_ansi-sequences.js"></script>
   <script src="tests-parse_ansi.js"></script>
   <script src="tests-parse_dos.js"></script>
