--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -1458,7 +1458,7 @@
                         drivers for</span>
                       IBM's 8514/A, XGA, XGA-2, Image Adapter/A</h2>
                     <p class="subtitle has-text-dark is-size-6 mb-2">Fonts provided on disk for use in these cards'
-                      accelearted graphics
+                      accelerated graphics
                       modes (up to 1024x768)</p>
                     <label class="radio" for="ibm_xga-ai_7x15">
                       <input type="radio" name="font" id="ibm_xga-ai_7x15" value="ibm_xga-ai_7x15"> IBM XGA-AI 7x15
@@ -1647,7 +1647,7 @@
                       </a></label>
                     <hr>
                     <h2 class="title has-text-dark is-size-6 ">Amstrad PC1512, PC1640, PPC series</h2>
-                    <p class="subtitle has-text-dark is-size-6 mb-2">PC compatibles popoular in Europe, with
+                    <p class="subtitle has-text-dark is-size-6 mb-2">PC compatibles popular in Europe, with
                       enhanced-CGA video (plus
                       monochrome support in the PPC)</p>
                     <label class="radio" for="amstrad_pc-2y">
@@ -1727,7 +1727,7 @@
                         portable</span></h2>
                     <p class="subtitle has-text-dark is-size-6 mb-2">Early PC-compatible with an enhanced monochrome
                       display, using
-                      16x13-pixel characteracter cells for enhanced text resolution</p>
+                      16x13-pixel character cells for enhanced text resolution</p>
                     <label class="radio" for="cordata_ppc-21">
                       <input type="radio" name="font" id="cordata_ppc-21" value="cordata_ppc-21"> <u>Cordata PPC-21</u>
                       <a href="https://int10h.org/oldschool-pc-fonts/fontlist/font?cordata_ppc-21" target="_blank">
@@ -1741,7 +1741,7 @@
                         PPC400-12 portable</span></h2>
                     <p class="subtitle has-text-dark is-size-6 mb-2">A later Cordata PPC series model, with an even more
                       enhanced
-                      monochrome display and 16x16-pixel characteracter cells</p>
+                      monochrome display and 16x16-pixel character cells</p>
                     <label class="radio" for="cordata_ppc-400">
                       <input type="radio" name="font" id="cordata_ppc-400" value="cordata_ppc-400"> <u>Cordata
                         PPC-400</u>
@@ -1837,7 +1837,7 @@
                       </a></label>
                     <hr>
                     <h2 class="title has-text-dark is-size-6 ">Leading Edge Model D</h2>
-                    <p class="subtitle has-text-dark is-size-6 mb-2">An XT-compatible machine from 1985 manfuactured by
+                    <p class="subtitle has-text-dark is-size-6 mb-2">An XT-compatible machine from 1985 manufactured by
                       Daewoo, with
                       both CGA and MDA/Hercules support on board</p>
                     <label class="radio" for="le_model_d_cga-2y">
@@ -1913,7 +1913,7 @@
                     <h2 class="title has-text-dark is-size-6 ">Nixdorf 8810 M15 PC07</h2>
                     <p class="subtitle has-text-dark is-size-6 mb-2">10MHz XT-class laptop with CGA-level compatibility,
                       but with
-                      higher-resolution (8x16-pixel) text mode characteracters</p>
+                      higher-resolution (8x16-pixel) text mode characters</p>
                     <label class="radio" for="nix8810_m15">
                       <input type="radio" name="font" id="nix8810_m15" value="nix8810_m15"> Nix8810 M15
                       <a href="https://int10h.org/oldschool-pc-fonts/fontlist/font?nix8810_m15" target="_blank">
@@ -1927,7 +1927,7 @@
                         version)</span></h2>
                     <p class="subtitle has-text-dark is-size-6 mb-2">286 AT-class laptop, still using CGA-compatible
                       video but with
-                      higher-resolution (8x16-pixel) text mode characteracters</p>
+                      higher-resolution (8x16-pixel) text mode characters</p>
                     <label class="radio" for="nix8810_m16">
                       <input type="radio" name="font" id="nix8810_m16" value="nix8810_m16"> Nix8810 M16
                       <a href="https://int10h.org/oldschool-pc-fonts/fontlist/font?nix8810_m16" target="_blank">
@@ -2129,7 +2129,7 @@
                         chip: 1000SL, SL/2, TL, TL/2, TL/3, RL)</span></h2>
                     <p class="subtitle has-text-dark is-size-6 mb-2">Tandy's later video chipset featured improved
                       graphics, optional
-                      monochrome support, and selectable characteracter sets for localization</p>
+                      monochrome support, and selectable character sets for localization</p>
                     <label class="radio" for="tandy1k-ii_200l-2y">
                       <input type="radio" name="font" id="tandy1k-ii_200l-2y" value="tandy1k-ii_200l-2y"> <u>Tandy1K-II
                         200L-2y</u>
@@ -2159,7 +2159,7 @@
                           video</span></span></h2>
                     <p class="subtitle has-text-dark is-size-6 mb-2">PC/XT compatibles with a form factor resembling
                       TeleVideo's
-                      terminals, and 8x9-pixel characteracters for improved legibility</p>
+                      terminals, and 8x9-pixel characters for improved legibility</p>
                     <label class="radio" for="telepc">
                       <input type="radio" name="font" id="telepc" value="telepc"> TelePC
                       <a href="https://int10h.org/oldschool-pc-fonts/fontlist/font?telepc" target="_blank">
@@ -2226,7 +2226,7 @@
                         T3100, T3200, T1000LE, T1200XE, T5100/5200, T2200SX, others[?]</span></h2>
                     <p class="subtitle has-text-dark is-size-6 mb-2">A range of laptops with either LCD or orange plasma
                       display panels
-                      (some with two selectable weigths for the text-mode font)</p>
+                      (some with two selectable weights for the text-mode font)</p>
                     <label class="radio" for="toshibatxl1_8x8">
                       <input type="radio" name="font" id="toshibatxl1_8x8" value="toshibatxl1_8x8"> ToshibaTxL1 8x8
                       <a href="https://int10h.org/oldschool-pc-fonts/fontlist/font?toshibatxl1_8x8" target="_blank">
@@ -2262,7 +2262,7 @@
                         class="has-text-weight-normal">(TD3.86)</span></h2>
                     <p class="subtitle has-text-dark is-size-6 mb-2">Found in some cheaper PC clones; the BIOS font is
                       used in graphics
-                      mode and includes only the lower ASCII characteracters (the rest come from DOS)</p>
+                      mode and includes only the lower ASCII characters (the rest come from DOS)</p>
                     <label class="radio" for="copam_bios-2y">
                       <input type="radio" name="font" id="copam_bios-2y" value="copam_bios-2y"> Copam BIOS-2y
                       <a href="https://int10h.org/oldschool-pc-fonts/fontlist/font?copam_bios-2y" target="_blank">
@@ -2275,7 +2275,7 @@
                         class="has-text-weight-normal">(v2.42)</span></h2>
                     <p class="subtitle has-text-dark is-size-6 mb-2">Found in some cheaper PC clones; the BIOS font is
                       used in graphics
-                      mode and includes only the lower ASCII characteracters (the rest come from DOS)</p>
+                      mode and includes only the lower ASCII characters (the rest come from DOS)</p>
                     <label class="radio" for="dtk_bios-2y">
                       <input type="radio" name="font" id="dtk_bios-2y" value="dtk_bios-2y"> DTK BIOS-2y
                       <a href="https://int10h.org/oldschool-pc-fonts/fontlist/font?dtk_bios-2y" target="_blank">
@@ -2287,7 +2287,7 @@
                     <h2 class="title has-text-dark is-size-6 ">Phoenix Technologies BIOS v2.xx</h2>
                     <p class="subtitle has-text-dark is-size-6 mb-2">Found in many PC clones; the BIOS font is used in
                       graphics mode and
-                      includes only the lower ASCII characteracters (the rest are custom additions)</p>
+                      includes only the lower ASCII characters (the rest are custom additions)</p>
                     <label class="radio" for="phoenix_bios-2y">
                       <input type="radio" name="font" id="phoenix_bios-2y" value="phoenix_bios-2y"> Phoenix BIOS-2y
                       <a href="https://int10h.org/oldschool-pc-fonts/fontlist/font?phoenix_bios-2y" target="_blank">
@@ -2299,7 +2299,7 @@
                     <h2 class="title has-text-dark is-size-6 ">VTech Laser XT BIOS</h2>
                     <p class="subtitle has-text-dark is-size-6 mb-2">Found in the Vtech Laser series; the BIOS font is
                       used in graphics
-                      mode and includes only the lower ASCII characteracters (the rest are custom additions)</p>
+                      mode and includes only the lower ASCII characters (the rest are custom additions)</p>
                     <label class="radio" for="vtech_bios-2y">
                       <input type="radio" name="font" id="vtech_bios-2y" value="vtech_bios-2y"> VTech BIOS-2y
                       <a href="https://int10h.org/oldschool-pc-fonts/fontlist/font?vtech_bios-2y" target="_blank">
@@ -2406,7 +2406,7 @@
                       </a></label>
                     <hr>
                     <h2 class="title has-text-dark is-size-6 ">ATI Small Wonder Graphics Solution</h2>
-                    <p class="subtitle has-text-dark is-size-6 mb-2">Provides 132x44 characteracters on MDA-type
+                    <p class="subtitle has-text-dark is-size-6 mb-2">Provides 132x44 characters on MDA-type
                       monochrome displays</p>
                     <label class="radio" for="ati_smallw_6x8">
                       <input type="radio" name="font" id="ati_smallw_6x8" value="ati_smallw_6x8"> ATI SmallW 6x8
@@ -2822,7 +2822,7 @@
                         TVGA8800CS)</span></h2>
                     <p class="subtitle has-text-dark is-size-6 mb-2">First (S)VGA chipsets from Trident; also supported
                       proprietary text
-                      modes using 8x11-pixel characteracters</p>
+                      modes using 8x11-pixel characters</p>
                     <label class="radio" for="tridentearly_8x8">
                       <input type="radio" name="font" id="tridentearly_8x8" value="tridentearly_8x8"> TridentEarly 8x8
                       <a href="https://int10h.org/oldschool-pc-fonts/fontlist/font?tridentearly_8x8" target="_blank">
@@ -2959,7 +2959,7 @@
                     <h2 class="title has-text-dark is-size-6 ">Wyse WY-700</h2>
                     <p class="subtitle has-text-dark is-size-6 mb-2">Specialized monochrome video board with nonstandard
                       hi-res
-                      graphics; used 16x16-pixel characteracters for improved text resolution</p>
+                      graphics; used 16x16-pixel characters for improved text resolution</p>
                     <label class="radio" for="wyse700a">
                       <input type="radio" name="font" id="wyse700a" value="wyse700a"> Wyse700a
                       <a href="https://int10h.org/oldschool-pc-fonts/fontlist/font?wyse700a" target="_blank">
@@ -2971,7 +2971,7 @@
                     <h2 class="title has-text-dark is-size-6 ">Wyse WY-700 hi-res video board</h2>
                     <p class="subtitle has-text-dark is-size-6 mb-2">Specialized monochrome video board with nonstandard
                       hi-res
-                      graphics; used 16x16-pixel characteracters for improved text resolution</p>
+                      graphics; used 16x16-pixel characters for improved text resolution</p>
                     <label class="radio" for="wyse700b">
                       <input type="radio" name="font" id="wyse700b" value="wyse700b"> Wyse700b
                       <a href="https://int10h.org/oldschool-pc-fonts/fontlist/font?wyse700b" target="_blank">
@@ -3040,7 +3040,7 @@
                     <h2 class="title has-text-dark is-size-6 ">Acorn BBC Master 512</h2>
                     <p class="subtitle has-text-dark is-size-6 mb-2">8-bit machine with a 80186 coprocessor to provide
                       PC emulation,
-                      using DRI DOS Plus (bold characteracters used instead of high-intensty text)</p>
+                      using DRI DOS Plus (bold characters used instead of high-intensity text)</p>
                     <label class="radio" for="master_512_bold">
                       <input type="radio" name="font" id="master_512_bold" value="master_512_bold"> Master 512 (bold)
                       <a href="https://int10h.org/oldschool-pc-fonts/fontlist/font?master_512_bold" target="_blank">
@@ -3121,7 +3121,7 @@
                     <h2 class="title has-text-dark is-size-6 ">Atari Portfolio</h2>
                     <p class="subtitle has-text-dark is-size-6 mb-2">First true palmtop computer (1989), with DOS in ROM
                       and a low-res
-                      LCD panel using 6x8-pixel characteracters</p>
+                      LCD panel using 6x8-pixel characters</p>
                     <label class="radio" for="portfolio_6x8">
                       <input type="radio" name="font" id="portfolio_6x8" value="portfolio_6x8"> Portfolio 6x8
                       <a href="https://int10h.org/oldschool-pc-fonts/fontlist/font?portfolio_6x8" target="_blank">
@@ -3189,7 +3189,7 @@
                     <h2 class="title has-text-dark is-size-6 ">HP 150 Touchscreen</h2>
                     <p class="subtitle has-text-dark is-size-6 mb-2">1983 MS-DOS office machine with an IR touchscreen
                       system and
-                      high-resolution text, effectively providing 18x14-pixel characteracters</p>
+                      high-resolution text, effectively providing 18x14-pixel characters</p>
                     <label class="radio" for="hp_150_re">
                       <input type="radio" name="font" id="hp_150_re" value="hp_150_re"> <u>HP 150 re.</u>
                       <a href="https://int10h.org/oldschool-pc-fonts/fontlist/font?hp_150_re" target="_blank">
@@ -3212,7 +3212,7 @@
                     <hr>
                     <h2 class="title has-text-dark is-size-6 ">NEC APC III</h2>
                     <p class="subtitle has-text-dark is-size-6 mb-2">A relative of NEC's PC-9800 series, but sold
-                      outisde Japan,
+                      outside Japan,
                       supporting 320x200 up to 640x400 graphics</p>
                     <label class="radio" for="nec_apc3_8x8-2y">
                       <input type="radio" name="font" id="nec_apc3_8x8-2y" value="nec_apc3_8x8-2y"> NEC APC3 8x8-2y
@@ -3251,7 +3251,7 @@
                     <h2 class="title has-text-dark is-size-6 ">RM Nimbus PC-186</h2>
                     <p class="subtitle has-text-dark is-size-6 mb-2">A semi-compatible for the British educational
                       market; used 250-line
-                      RGB video with 8x10-pixel characteracters</p>
+                      RGB video with 8x10-pixel characters</p>
                     <label class="radio" for="rm_nimbus">
                       <input type="radio" name="font" id="rm_nimbus" value="rm_nimbus"> RM Nimbus
                       <a href="https://int10h.org/oldschool-pc-fonts/fontlist/font?rm_nimbus" target="_blank">
@@ -3275,7 +3275,7 @@
                     <h2 class="title has-text-dark is-size-6 ">Siemens PC-D</h2>
                     <p class="subtitle has-text-dark is-size-6 mb-2">80186-based machine running MS-DOS with monochrome
                       video support at
-                      640x350 (using 8x14-pixel characteracters)</p>
+                      640x350 (using 8x14-pixel characters)</p>
                     <label class="radio" for="siemens_pc-d">
                       <input type="radio" name="font" id="siemens_pc-d" value="siemens_pc-d"> Siemens PC-D
                       <a href="https://int10h.org/oldschool-pc-fonts/fontlist/font?siemens_pc-d" target="_blank">
@@ -3313,7 +3313,7 @@
                     <h2 class="title has-text-dark is-size-6 ">Telenova Compis</h2>
                     <p class="subtitle has-text-dark is-size-6 mb-2">Seen in the Scandinavian education market; used
                       proprietary hi-res
-                      monochrome video with 8x16-pixel characteracters</p>
+                      monochrome video with 8x16-pixel characters</p>
                     <label class="radio" for="compis">
                       <input type="radio" name="font" id="compis" value="compis"> Compis
                       <a href="https://int10h.org/oldschool-pc-fonts/fontlist/font?compis" target="_blank">
