--- a/ext/html/popup.html
+++ b/ext/html/popup.html
@@ -81,7 +81,7 @@
       </div>
       <div class="notification is-link is-light" id="allowAccess" title="Open the Settings Option tab">
         To include a new website, click here to open settings and add the URL to the
-        <strong>Autorun for webistes</strong> list.
+        <strong>Autorun for websites</strong> list.
       </div>
       <div class="notification is-info is-light is-hidden" id="unlockLocalfiles" title="Open the Extension options">
         When <strong>Allow access to file URLs</strong> is toggled, RetroTxt
