--- a/ext/test/index.html
+++ b/ext/test/index.html
@@ -20,7 +20,7 @@
   <script src="tests-downloads.js"></script>
   <script src="tests-file-examples.js"></script>
   <script src="tests-expanded-examples.js"></script>
-  <script src="tests-xss-custom.js"></script>
+  <script src="tests-xss.js"></script>
   <script src="tests-parse_ansi-sequences.js"></script>
   <script src="tests-parse_ansi.js"></script>
   <script src="tests-parse_dos.js"></script>
