--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -125,9 +125,9 @@
             <div class="notice" style="display: none;" id="newInstallNotice">
               <div class="notification is-success is-light">
                 <p class="mb-2 is-size-3">Welcome</p>
-                <p class="mt-2 is-size-5">The default settings are ready to go,
-                  but using the <em>Fonts</em> and <tab>Display</tab> tabs,
-                  you can tweak these to your liking.</p>
+                <p class="mt-2 is-size-5">You're all set with the default settings! 
+                    Feel free to explore the <em>Fonts</em> and 
+                    <em>Display</em> tabs to make it your own.</p>
               </div>
             </div>
           </div>
